Version 1.5 Beta (Build 160903)

* Added Unroot
* Added APK unpacker
* Moved reboot to download mode to Device specific tools > Samsung
* Added license to every java source file

Version 1.4 Stable (Build 160810)

* HTC device specific tools (3) added
  They can be accessed from :
  "Menu > Device specific tools > HTC >..."
  [THEY ARE "NOT" TESTED, as I don't have a HTC device,
  please report bugs if you encounter them.]
* "File" in menu bar renamed to "Menu"
* "Dev. Tools" renamed to "Advanced"
* Splash screen duration reduced to 2.5 seconds
* Tabs re-arranged
* Changelog tracker removed from application to reduce size
* Other minor UI changes

Version 1.4 Beta 3 (Build 160806)

* Logger speedup
* Cache cleaning while exit added
* Improvements to view connected device
* Device connection limit detection algorithm
  improvements
  
Version 1.4 Beta 2 (Build 160802)

* Attached device(s) list viewer added
* Device connection limit added for preventing
  accidental code execution on the device(s)
  other than targeted
* Marshmallow connectivity help added
* Added fastboot help
* Missing tips added
* Few things moved here and there
* Minor UI changes
* Various minor improvements

Version 1.4 Beta 1 (Build 160801)

* File Manager merged into Droid PC Suite
* Background information reporting added
* File Manager speed up while launching
* Other misc. improvements in File Manager
* Minor bug fix

Version 1.3 Stable (Build 160723)

* Screen recorder added
* Added button for taking screenshots
* Installer and Uninstaller bundled in App Manager
* Flash radio added
* Wipe radio added
* Reboot to download mode for samsung devices added
* Device feature support viewer added
* Check for max users supported by device added
* Developer tools added
* App information viewer added
* App packages list viewer added
* Battery information tool added
* CPU information viewer added
* Kill apps feature added
* Memory information tool added
* WiFi information tool added