@@ -48,7 +48,6 @@ import java.util.Enumeration;
 import java.util.List;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
-
 import javax.swing.ImageIcon;
 import javax.swing.JButton;
 import javax.swing.JFileChooser;
@@ -2368,8 +2367,18 @@ public class Interface extends JFrame {
 			}
 		});
 		btnUnRoot.setToolTipText("Unroot device by removing SU binary from the device");
-		btnUnRoot.setBounds(282, 27, 220, 75);
+		btnUnRoot.setBounds(588, 27, 220, 75);
 		panel_10.add(btnUnRoot);
+		
+		JButton btnRepackAPKs = new JButton("Repack APKs");
+		btnRepackAPKs.addActionListener(new ActionListener() {
+			public void actionPerformed(ActionEvent e) {
+				new Repacker();
+			}
+		});
+		btnRepackAPKs.setToolTipText("Repack previously unpacked APKs and save to them to disk");
+		btnRepackAPKs.setBounds(296, 27, 220, 75);
+		panel_10.add(btnRepackAPKs);
 		
 		JLabel label_2 = new JLabel("");
 		label_2.setBounds(50, 0, 1038, 256);
