@@ -19,6 +19,7 @@ Droid PC Suite contains set of tools for administration of android smartphones o
 * build.prop Editor
 * ADB Terminal
 * Unpack APKs
+* Repack APKs
 * Cyptographic hash sums comparing and calculator
 
 ## How to build from source using eclipse:
